Remove whitespace; fix right product content area

--- a/sources/stylesheets/_content-item.scss
+++ b/sources/stylesheets/_content-item.scss
@@ -237,6 +237,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  max-width: 50%;
 
   &.mar_r-40 {
     margin-right: 40px;
