--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -4105,6 +4105,7 @@ body .edy-settings-editor:not(.editor_default) .edy-popover-content .edy-setting
       -ms-flex-direction: column;
           flex-direction: column;
   width: 100%;
+  max-width: 50%;
 }
 
 .flex-col.mar_r-40 {
